# parallax

./: .gitattributes  .gitignore  ARCHITECTURE.md  NOTICE  README.md
enrichment/: README.md  dependency-graph.md  execution-context.md  network-destination.md  package-metadata.md  source-to-binary-drift.md  temporal.md
investigation/: README.md  confidence-algebra.md  cycle.md
investigation/methods/: README.md  build-ci.md  dynamic.md  network.md  osint.md  scaffolding.md  static-binary.md  static-source.md
investigation/runs/: README.md
investigation/runs/examples/: README.md
lenses/architecture/: README.md
lenses/capability/: README.md  compositions.md  indicators.md
lenses/curiosity/: README.md  indicators.md
lenses/decisions/: README.md  compositions.md  indicators.md
lenses/mcd/: README.md
lenses/mcd/compositions/: BP-AGENTMANIP.md  BP-BACKDOOR.md  BP-CREDTHEFT.md  BP-DROPPER.md  BP-EXFIL.md  BP-LATERAL.md  BP-MINER.md  BP-MITM.md  BP-OBFEXEC.md  BP-RANSOM.md  BP-ROOTKIT.md  BP-SUPPLY.md  (+5 more)
ontology/: README.md  atom-registry.toml
ontology/idioms/: credential-store-sweep.md  decode-and-execute-chain.md  remote-shell.md  sentinel-guarded-region-access.md
ontology/templates/: atom-template.md  idiom-template.md
parallax/: README.md  pyproject.toml
parallax/parallax/: __init__.py  atoms.py  lenses.py  model.py  paths.py  signatures.py  validators.py
parallax/tests/: test_sdk.py
scripts/: build-signature-json
signatures/: schema.json
signatures/packs/: content-surfaces.json  content-surfaces.yaml  source-callees.json  source-callees.yaml
(+183 files in other folders)
