[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "parallax"
version = "0.1.0"
description = "The pure parallax code-understanding SDK: taxonomy vocabulary (atoms, lenses), signature-pack schema, and pure matching. No tooling, no parsers, no tree-sitter."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "parallax-taxonomy" }]
keywords = ["parallax", "taxonomy", "code-understanding", "signatures", "ontology"]
# Pure stdlib. Zero runtime dependencies by design (see README).
dependencies = []

[project.urls]
Homepage = "https://github.com/batteryshark/parallax"

[tool.hatch.build.targets.wheel]
packages = ["parallax"]

[tool.hatch.build.targets.sdist]
include = ["parallax", "README.md", "pyproject.toml"]
